--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Site Title"
+title                    : "Theoretical Biophysics"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Theoretical Biophysics"
+description              : "Theoretical Biophysics Group at Humboldt University Berlin"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : #"Your Name"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : #"I am an amazing person."
+  location         : #"Somewhere"
   email            :
   uri              :
   bitbucket        :
@@ -111,6 +111,7 @@ author:
 include:
   - .htaccess
   - _pages
+  - _people
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -244,3 +245,14 @@ defaults:
       comments: # true
       share: true
       related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+
+collections:
+  - people
